# obs-gstreamer

./: .gitignore  Makefile  README.md  global.c  gstreamer.c  meson.build  streaminsync.c
android/: README.MD  build.gradle  gradle.properties  settings.gradle
android/android-streaminsync/: AndroidManifest.xml  build.gradle
android/android-streaminsync/jni/: Android.mk  tutorial-5.c
android/android-test/: AndroidManifest.xml  build.gradle
android/android-test/jni/: Android.mk  tutorial-2.c
android/android-test/src/org/freedesktop/gstreamer/tutorials/tutorial_2/: Tutorial2.kt
android/android-tutorial-1/: build.gradle
android/android-tutorial-3/: build.gradle
android/android-tutorial-4/: build.gradle
android/android-tutorial-5/: build.gradle
android/android-tutorial-streaminsync/: build.gradle
android/android-tutorial-streaminsync/jni/: Android.mk  tutorial-2.c
android/gradle/wrapper/: gradle-wrapper.properties
gst-android-camera/: gradle.properties
gst-android-camera/app/: build.gradle
gst-android-camera/app/src/main/java/org/freedesktop/gstreamer/camera/: CameraActivity.java  Config.java  GstAhc.java
gst-android-camera/app/src/main/jni/: Android.mk  android_camera.c
gst-android-camera/app/src/main/res/layout/: activity_main.xml  network.xml
receiver/: global.c  main.c  meson.build  receiver.c  receiver.h
sender/: Makefile  main.c  meson.build  sender.c  sender.h  testntp.py  version.c.in
test/: Makefile  main.c
